new：添加AMemory缓存机制 update :调整BaseTBActivity new：添加UserVM new：添加上传图片界面、保存图片功能

--- a/app/src/main/res/layout/activity_post_pic0.xml
+++ b/app/src/main/res/layout/activity_post_pic0.xml
@@ -5,21 +5,23 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     >
+  <include
+      layout="@layout/include_top_bar"
+      android:id="@+id/include_top"
+      />
 
-  <com.github.chrisbanes.photoview.PhotoView
+  <ImageView
       android:id="@+id/iv_picture"
       android:layout_width="0dp"
       android:layout_height="0dp"
-      android:layout_gravity="center"
       android:background="@color/gray"
-      android:paddingBottom="40dp"
       android:scaleType="centerInside"
-      android:transitionName="@string/girl_photo_describe"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintLeft_toLeftOf="parent"
       app:layout_constraintRight_toRightOf="parent"
-      app:layout_constraintTop_toTopOf="parent"
+      app:layout_constraintTop_toBottomOf="@id/include_top"
       />
+
 
   <LinearLayout
       android:id="@+id/ll_bottom"
