--- a/app/src/main/res/layout/activity_picture.xml
+++ b/app/src/main/res/layout/activity_picture.xml
@@ -12,6 +12,7 @@
       android:id="@+id/photo_view"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
+      android:layout_below="@+id/tool_bar"
       android:layout_gravity="center"
       android:transitionName="@string/girl_photo_describe"
       />
