--- a/app/src/main/res/layout/frag_profile.xml
+++ b/app/src/main/res/layout/frag_profile.xml
@@ -16,6 +16,16 @@
       app:layout_constraintRight_toRightOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       />
+  <Button
+      android:id="@+id/btn_logout"
+      android:layout_width="0dp"
+      android:layout_height="44dp"
+      android:gravity="center"
+      android:text="退出登录"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintLeft_toLeftOf="parent"
+      app:layout_constraintRight_toRightOf="parent"
+      />
 
 
 </android.support.constraint.ConstraintLayout>
