new：完成头像、昵称编辑 new：完成图片上传 new：完成游记上传 new：添加WebActivity new：添加AMemoryJava版本 new：添加线程管理，暂未用上

--- a/app/src/main/res/layout/frag_word.xml
+++ b/app/src/main/res/layout/frag_word.xml
@@ -36,5 +36,15 @@
         />
   </com.scwang.smartrefresh.layout.SmartRefreshLayout>
 
+  <android.support.design.widget.FloatingActionButton
+      android:id="@+id/fbtn_upload_word"
+      android:layout_width="48dp"
+      android:layout_height="48dp"
+      android:layout_marginBottom="16dp"
+      android:layout_marginRight="16dp"
+      android:src="@drawable/ic_edit_24dp"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintRight_toRightOf="parent"
+      />
 
 </android.support.constraint.ConstraintLayout>
