--- a/app/src/main/res/layout/activity_post_pic.xml
+++ b/app/src/main/res/layout/activity_post_pic.xml
@@ -4,18 +4,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/black_bg"
     >
 
   <com.github.chrisbanes.photoview.PhotoView
       android:id="@+id/iv_picture"
       android:layout_width="0dp"
-      android:layout_height="0dp"
+      android:layout_height="wrap_content"
       android:layout_gravity="center"
-      android:background="@color/gray"
-      android:paddingBottom="40dp"
+      android:layout_marginLeft="20dp"
+      android:layout_marginRight="20dp"
+      android:layout_marginTop="20dp"
+      android:background="@color/black_bg"
       android:scaleType="centerInside"
       android:transitionName="@string/girl_photo_describe"
-      app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintLeft_toLeftOf="parent"
       app:layout_constraintRight_toRightOf="parent"
       app:layout_constraintTop_toTopOf="parent"
@@ -65,15 +67,17 @@
       android:id="@+id/tv_pic_loc"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
+      android:layout_marginTop="12dp"
       android:drawableLeft="@drawable/ic_bubble_chart_black_24dp"
       android:drawablePadding="8dp"
       android:gravity="center_vertical"
       android:paddingBottom="4dp"
-      android:paddingLeft="12dp"
+      android:paddingLeft="20dp"
       android:paddingRight="4dp"
+      android:visibility="gone"
       android:paddingTop="4dp"
       android:textSize="12sp"
-      app:layout_constraintBottom_toTopOf="@id/ll_bottom"
+      app:layout_constraintTop_toBottomOf="@id/iv_picture"
       tools:text="广州市·白云山风景区"
       />
 
@@ -82,11 +86,21 @@
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:checked="true"
+      android:visibility="gone"
       app:layout_constraintBottom_toBottomOf="@id/tv_pic_loc"
       app:layout_constraintLeft_toRightOf="@id/tv_pic_loc"
       app:layout_constraintTop_toTopOf="@id/tv_pic_loc"
       />
-
+  <android.support.design.widget.FloatingActionButton
+      android:id="@+id/fbtn_upload_pic"
+      android:layout_width="48dp"
+      android:layout_height="48dp"
+      android:layout_marginBottom="16dp"
+      android:layout_marginRight="16dp"
+      android:src="@drawable/ic_file_upload_black_24dp"
+      app:layout_constraintBottom_toTopOf="@id/ll_bottom"
+      app:layout_constraintRight_toRightOf="parent"
+      />
 </android.support.constraint.ConstraintLayout>
 
 
