--- a/app/src/main/res/layout/frag_profile.xml
+++ b/app/src/main/res/layout/frag_profile.xml
@@ -6,21 +6,33 @@
     android:layout_height="match_parent"
     >
 
-  <TextView
-      android:layout_width="0dp"
-      android:layout_height="0dp"
-      android:gravity="center"
-      android:text="我的"
-      app:layout_constraintBottom_toBottomOf="parent"
+  <ImageView
+      android:id="@+id/iv_user_face"
+      android:layout_width="100dp"
+      android:layout_height="100dp"
+      android:layout_marginTop="160dp"
+      android:src="@mipmap/ic_launcher"
       app:layout_constraintLeft_toLeftOf="parent"
       app:layout_constraintRight_toRightOf="parent"
       app:layout_constraintTop_toTopOf="parent"
+      />
+
+  <TextView
+      android:id="@+id/tv_username"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginTop="20dp"
+      android:text="我的"
+      android:textColor="@color/white"
+      app:layout_constraintLeft_toLeftOf="parent"
+      app:layout_constraintRight_toRightOf="parent"
+      app:layout_constraintTop_toBottomOf="@id/iv_user_face"
       />
   <Button
       android:id="@+id/btn_logout"
       android:layout_width="0dp"
       android:layout_height="44dp"
-      android:gravity="center"
+      android:layout_margin="20dp"
       android:text="退出登录"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintLeft_toLeftOf="parent"
