--- a/app/src/main/res/layout/frag_trip.xml
+++ b/app/src/main/res/layout/frag_trip.xml
@@ -36,6 +36,15 @@
         />
   </com.scwang.smartrefresh.layout.SmartRefreshLayout>
 
-
+  <android.support.design.widget.FloatingActionButton
+      android:id="@+id/fbtn_edit_journey"
+      android:layout_width="48dp"
+      android:layout_height="48dp"
+      android:layout_marginBottom="16dp"
+      android:layout_marginRight="16dp"
+      android:src="@drawable/ic_border_24dp"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintRight_toRightOf="parent"
+      />
 
 </android.support.constraint.ConstraintLayout>
