--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,7 +7,7 @@
     <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
     <item name="colorAccent">@color/colorAccent</item>
     <item name="android:windowIsTranslucent">true</item>
-    <item name="android:windowBackground">@android:color/transparent</item>
+    <item name="android:windowBackground">@color/black_bg</item>
   </style>
 
   <style name="TranslucentTheme" parent="AppTheme"/>
@@ -35,7 +35,10 @@
     <item name = "android:textSize">14sp</item>
   </style>
 
-
+  <style name="etSingleLineStyle">
+    <item name="android:singleLine">true</item>
+    <item name="android:textColor">@color/white</item>
+  </style>
 
 
 </resources>
